--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 .wp-caption {
 	position: relative;
+	padding: 0;
 }
+
 .wp-caption:hover .wp-caption-text {
 	opacity: 1
 }
@@ -9,9 +11,10 @@
 	position: absolute;
 	opacity: 0;
 	top: 0;
+	left: 0;
+	right: 0;
 	padding: 25px;
 	background-color: rgba(204, 204, 204, .6);
-	width: 100%;
 	-webkit-transition: opacity .5s ease-out;
 	-moz-transition: opacity .5s ease-out;
 }
